--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -1995,8 +1995,8 @@ N$_e$ is high, or accentuating differences among intervals when N$_e$ is low.
 		% constant with respect to N$_e$ in a single population model, 
 		% but vary in models with population structure (also shown with respect to 
 		% species tree interval lengths in coalescent units, across the top axis). 
-		(e-f) The mean waiting distance (black square) until the first tree-change (e) 
-		or topology-change (f) event in a simulated tree sequence, and the mean 
+		(e-f) The mean waiting distance (black square) until the first observed 
+		tree-change (e) or topology-change (f) in a simulated tree sequence, and the mean 
 		(colored circle) and 95\% CI (grey fill) of predicted waiting distances calculated
 		from the first embedded genealogy in each tree sequence.
 		 % under the MS-SMC'. 
